--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script>
         // Load the model
         async function loadModel() {
-            const modelURL = URL + "model.json";
-            const metadataURL = URL + "metadata.json";
+            const modelURL = https://selinadursun.github.io/Experiment-AI/ + "model.json";
+            const metadataURL = https://selinadursun.github.io/Experiment-AI/ + "metadata.json";
             return await tmImage.load(modelURL, metadataURL);
         }
 
