--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         // Load the model first
         let model, webcam, labelContainer;
-        const URL = "https://your-web-server.com/path/to/your/model/";
+        const URL = "https://selinadursun.github.io/Experiment-AI/";
         let maxPredictions;
 
         loadModel().then(function (loadedModel) {
